packages/kui-builder/examples/build-configs/default/theme/css/themes/light.css
/* color variables */
body {
    --color-hover-primary-text: #294c86;
    --color-content-divider: #4173AF;
    --color-tag-beta-fill: #dfe3e6;
    --color-tag-beta-text: #394b54;
    --color-tag-ibm-fill: #c0e6ff;
    --color-tag-ibm-text: #325c80;
    --color-stripe-01: #152935; /* 202 60 21 */
    --color-stripe-02: #0f212e; /* 205 67 18 */
    --color-text-01: #152934;
    --color-text-02: #5a6872;
    --color-text-against-dark-bg: var(--color-ui-02);
    --color-support-01: #e71d32;
    --color-support-01-lighter: rgba(227, 26, 28, 0.8);
    --color-support-02: #5aa700;
    --color-support-03: #efc100;
    --color-support-03-darker: hsl(48, 100%, 38%);  /* dialed down from 47% lightness */
    --color-support-04: #5aaafa;
    --color-brand-01: #3d70b2;
    --color-brand-01-10: hsla(214, 49%, 47%, 0.1); /* 10% opacity */
    --color-brand-02: #5596e6;
    --color-brand-03: #00b4a0;
    --color-ui-01: #fff; /* 216 0 100 8 */
    --color-ui-02: #f5f7fa; /* 216 2 98 */
    --color-ui-03: #f0f3f6; /* 210 2 96 */
    --color-ui-04: #dfe3e6; /* 206 3 90 */
    --color-ui-05: #8c9ba5; /* 204 15 65 */

    --color-ok: var(--color-support-02);
    --color-ok-lighter: rgba(97, 164, 38, 0.75); /* support-02 at reduced alpha */
    --color-error: var(--color-support-01);
    --color-error-lighter: rgba(231, 29, 50, 0.75); /* support-01 at reduced alpha */

    --color-scrollbar-thumb: rgba(21, 41, 52, 0.35); /* color-text-01 at reduced alpha */
    --color-scrollbar-track: var(--color-ui-05);

    --color-selection-background: rgba(140, 155, 165, 0.40); /* color-ui-05 at reduced alpha */
    --color-selection-color: var(--color-text-01);

    --color-carbon-components-h3: #3057d5;

    --color-ui-06: #f4f7fb; /* nick made up this signifier, it's not from carbon-components */
    --color-field-01: #f4f7fb;

    --font-sans-serif: "IBM Plex Sans", sans-serif;
    --font-monospace: "IBM Plex Mono","DejaVu Sans Mono","Bitstream Vera Sans Mono",Courier,monospace;

    --color-tab-01: #666666;
    --color-tab-02: #fdc086;
    --color-tab-03: #386cb0;
    --color-tab-04: #7fc97f;
    --color-tab-05: #ffff99;
    --color-tab-06: #beaed4;
    --color-tab-07: #f0027f;
    --color-tab-08: #bf5b17;
}

.application-icon {
    background-image: url('../../icons/svg/kui.svg');
}
/* body.not-electron:not(.webpack-local) .application-icon {
    background-image: url('../icons/svg/kui.svg');
} */

